--- a/kata-tdd-interactions/pom.xml
+++ b/kata-tdd-interactions/pom.xml
@@ -18,6 +18,12 @@
       <groupId>com.ambita</groupId>
       <artifactId>kata-tdd-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
