--- a/kata-tdd-refacotring/pom.xml
+++ b/kata-tdd-refacotring/pom.xml
@@ -12,4 +12,12 @@
   <name>Kate 3</name>
   <artifactId>kata-tdd-refacotring</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+  </dependencies>
 </project>
