--- a/kata-tdd-string-kalkulator/pom.xml
+++ b/kata-tdd-string-kalkulator/pom.xml
@@ -18,5 +18,10 @@
       <groupId>com.ambita</groupId>
       <artifactId>kata-tdd-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
