upgrade to junit 5

--- a/kata-tdd-common/pom.xml
+++ b/kata-tdd-common/pom.xml
@@ -13,4 +13,17 @@
   <artifactId>kata-tdd-common</artifactId>
   <name>Common</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
 </project>
